30 Dec 2025 - v4:
- Fixed bug that crashes client when getting transaction details from server that is down
- Added failover mechanism (retry queue) for incomplete transactions 
- Added webhooks in Client to receive updates for incomplete transactions

29 Dec 2025 - v3:
- Modified payment process to include creation of transaction nonce and token (idempotent keys are omitted due to the simplicity of client interface)
- Modified retries to adopt exponential backoff

28 Dec 2025 - v2:
- Added versioning to endpoints
- Modified endpoints to adhere to RESTful guidelines

25 Dec 2025 - v1:
- Fully functional payment API system
- Event-driven handling of side effects
- Simple CLI client for interacting with services
- Unit tests covering API endpoints
- Logging